--- a/bookreviews/templates/bookreviews/create-ticket.html
+++ b/bookreviews/templates/bookreviews/create-ticket.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Créer un nouveau ticket</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
           <p>
