--- a/bookreviews/templates/bookreviews/follow.html
+++ b/bookreviews/templates/bookreviews/follow.html
@@ -2,7 +2,19 @@
 
 {% block content %}
     <h2>Suivre d'autres utilisateurs</h2>
-    <div></div>
+    <div>
+        <form method="post">
+            {% csrf_token %}
+            <input type="search" name="email" list="choices" placeholder="Choisissez un utilisateur à suivre...">
+            <datalist id="choices">
+                {% for usr in all_users %}
+                <option value={{ usr.email }} />
+                {% endfor %}
+              </datalist>
+
+            <button type="submit">Suivre</button>
+          </form>
+    </div>
     <h2>Abonnements</h2>
     <div>
         <ul>
