creation du feed et des vues edit

--- a/bookreviews/templates/bookreviews/feed.html
+++ b/bookreviews/templates/bookreviews/feed.html
@@ -7,6 +7,59 @@
         <a href="{% url 'create_review_view'%}">Créer une review</a>
     </div>
     <div>
-        <h2>Latest rewiews & tickets from your followers:</h2>
+        <h2>Posts les plus récents des personnes que vous suivez :</h2>
+        <div>
+            {% for post in posts %}
+                {% if post.content_type == 'TICKET' %}
+                    <div class="ticket-container">
+                        <div>
+                            {% if user == post.user %}
+                            <span class="you">Vous avez créé ce ticket</span>
+                            {% else %}
+                            <span>Ticket créé par {{ post.user }}</span>
+                            {% endif %}
+                            <span>{{ post.time_created }}</span>
+                        </div>
+                        <h2>{{ post.title }}</h2>
+                        <div><span>{{ post.descripton }}</span></div>
+                        <img class="cover" src="/media/{{ post.image }}" alt="image de couverture du ticket" />
+                        <div>
+                            <a href="{% url 'edit_own_ticket_view' ticket_id=post.id%}">Créer une review</a>
+                        </div>
+                    </div>
+                    
+    
+                {% elif post.content_type == 'REVIEW' %}
+                <div class="review-container">
+                    <div>
+                        {% if user == post.user %}
+                            <span class="you">Vous avez créé cette review</span>
+                            {% else %}
+                            <span>Review créée par {{ post.user }}</span>
+                            {% endif %}
+                        <span>{{ post.time_created }}</span>
+                    </div>
+                    <div>
+                        <h2>{{ post.headline }}</h2>
+                        <span>{{ post.rating }} /5</span>
+                        <span>{{ post.body }}</span>
+                    </div>
+                    <div class="ticket-container">
+                        <div>
+                            {% if user == post.ticket.user %}
+                            <span class="you">Vous avez créé ce ticket</span>
+                            {% else %}
+                            <span>Ticket créé par {{ post.ticket.user }}</span>
+                            {% endif %}
+                            <span>{{ post.ticket.time_created }}</span>
+                        </div>
+                        <h2>{{ post.ticket.title }}</h2>
+                        <img class="cover" src="/media/{{ post.ticket.image }}" alt="image de couverture du ticket" />
+                    </div>
+                    
+                </div>
+                {% endif %}
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
