--- a/bookreviews/templates/bookreviews/base.html
+++ b/bookreviews/templates/bookreviews/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/styles.css">
     <title>AppTitle</title>
 </head>
 
