--- a/bookreviews/templates/bookreviews/feed.html
+++ b/bookreviews/templates/bookreviews/feed.html
@@ -24,7 +24,7 @@
                         <div><span>{{ post.descripton }}</span></div>
                         <img class="cover" src="/media/{{ post.image }}" alt="image de couverture du ticket" />
                         <div>
-                            <a href="{% url 'edit_own_ticket_view' ticket_id=post.id%}">Créer une review</a>
+                            <a href="{% url 'create_review_from_ticket_view' ticket_id=post.id%}">Créer une review</a>
                         </div>
                     </div>
                     
