ajout du style sur les pages de login et signup + fichier js permettant de fermer automatiquement le popup

--- a/bookreviews/templates/bookreviews/feed.html
+++ b/bookreviews/templates/bookreviews/feed.html
@@ -59,6 +59,8 @@
                     
                 </div>
                 {% endif %}
+            {% empty %}
+            <span>Aucun post à afficher pour le moment. 👀</span>
             {% endfor %}
             <div class="pagination">
                 <span class="step-links">
