--- a/registration/templates/registration/signup.html
+++ b/registration/templates/registration/signup.html
@@ -1,4 +1,9 @@
-<h2>Sign up</h2>
+{% extends "registration/base.html" %}
+
+{% block content %}
+<a href="{% url 'signin_view' %}" class="secondary-btn">> Revenir à la page de connexion</a>
+<br>
+<h2>Inscrivez-vous sur LitReview 🎉</h2>
 <form method="post">
   {% csrf_token %}
   {% for field in form %}
@@ -13,5 +18,6 @@
       {% endfor %}
     </p>
   {% endfor %}
-  <button type="submit">Sign up</button>
+  <button type="submit">S'inscrire</button>
 </form>
+{% endblock %}
