--- a/bookreviews/templates/bookreviews/create-review-from-ticket.html
+++ b/bookreviews/templates/bookreviews/create-review-from-ticket.html
@@ -16,19 +16,7 @@
 </div>
 <hr>
 <form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-    {% for field in review_form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
-    {% endfor %}
+  {% include "bookreviews/form.html" with form=review_form %}
     <button type="submit">Envoyer</button>
   </form>
 {% endblock %}
