--- a/bookreviews/templates/bookreviews/create-review.html
+++ b/bookreviews/templates/bookreviews/create-review.html
@@ -4,33 +4,10 @@
     <h1>Créer une nouvelle review</h1>
     <h2 class="subtitle">1. Créer un nouveau ticket</h2>
     <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% for field in ticket_form %}
-          <p>
-            {{ field.label_tag }}<br>
-            {{ field }}
-            {% if field.help_text %}
-              <small style="color: grey">{{ field.help_text }}</small>
-            {% endif %}
-            {% for error in field.errors %}
-              <p style="color: red">{{ error }}</p>
-            {% endfor %}
-          </p>
-        {% endfor %}
+        {% include "bookreviews/form.html" with form=ticket_form %}
         <hr>
         <h2 class="subtitle">2. Créer la review liée à ce ticket</h2>
-        {% for field in review_form %}
-          <p>
-            {{ field.label_tag }}<br>
-            {{ field }}
-            {% if field.help_text %}
-              <small style="color: grey">{{ field.help_text }}</small>
-            {% endif %}
-            {% for error in field.errors %}
-              <p style="color: red">{{ error }}</p>
-            {% endfor %}
-          </p>
-        {% endfor %}
+        {% include "bookreviews/form.html" with form=review_form %}
         <button type="submit">Envoyer</button>
       </form>
 {% endblock %}
