--- a/bookreviews/templates/bookreviews/edit-review.html
+++ b/bookreviews/templates/bookreviews/edit-review.html
@@ -14,19 +14,7 @@
     </div>
     <h1>Modifier la review n°{{ review_id }}</h1>
     <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% for field in form %}
-          <p>
-            {{ field.label_tag }}<br>
-            {{ field }}
-            {% if field.help_text %}
-              <small style="color: grey">{{ field.help_text }}</small>
-            {% endif %}
-            {% for error in field.errors %}
-              <p style="color: red">{{ error }}</p>
-            {% endfor %}
-          </p>
-        {% endfor %}
+      {% include "bookreviews/form.html" with form=form %}
         <button type="submit">Modifier la review</button>
       </form>
 {% endblock %}
