--- a/bookreviews/templates/bookreviews/my-posts.html
+++ b/bookreviews/templates/bookreviews/my-posts.html
@@ -5,45 +5,11 @@
     <div>
         {% for post in posts %}
             {% if post.content_type == 'TICKET' %}
-                <div class="ticket-container">
-                    <div class="metadata">
-                        <span>Votre <b>TICKET</b></span>
-                        <span>{{ post.time_created }}</span>
-                    </div>
-                    <h2>{{ post.title }}</h2>
-                    <div><span>{{ post.descripton }}</span></div>
-                    <img class="cover" src="/media/{{ post.image }}" alt="image de couverture du ticket" />
-                    <div class="card-btn-container">
-                        <a class="primary-btn" href="{% url 'edit_own_ticket_view' ticket_id=post.id%}">Modifier</a>
-                        <a class="last-item" href="{% url 'delete_ticket_view' ticket_id=post.id%}">Supprimer</a>
-                    </div>
-                </div>
-                
+                {% include "bookreviews/ticket-container.html" with has_create_review_btn=False is_editable=True is_within_review=False %}  
 
             {% elif post.content_type == 'REVIEW' %}
-            <div class="review-container">
-                <div class="metadata">
-                    <span>Votre <b>REVIEW</span>
-                    <span>{{ post.time_created }}</span>
-                </div>
-                <div>
-                    <h2>{{ post.headline }}</h2>
-                    <span>{{ post.rating }} /5</span>
-                    <span>{{ post.body }}</span>
-                </div>
-                <div class="ticket-container">
-                    <div class="metadata">
-                        <span>Votre <b>TICKET</span>
-                        <span>{{ post.ticket.time_created }}</span>
-                    </div>
-                    <h2>{{ post.ticket.title }}</h2>
-                    <img class="cover" src="/media/{{ post.ticket.image }}" alt="image de couverture du ticket" />
-                </div>
-                <div class="card-btn-container">
-                    <a class="primary-btn" href="{% url 'edit_own_review_view' review_id=post.id%}">Modifier</a>
-                    <a class="last-item" href="{% url 'delete_review_view' review_id=post.id%}">Supprimer</a>
-                </div>
-            </div>
+                {% include "bookreviews/review-container.html" with is_editable=True%}
+
             {% endif %}
         {% empty %}
         <span>Aucun post à afficher pour le moment. 👀</span>
